src/test/deca/context/invalid/provided/ContextSansObjet/DoubleIdentification.deca
//Description : 
//	double identification de x
//
//Resulats : 
//Erreur contextuelle
// 	Ligne 10 : throws DoubleDefException

{
	int x;
	int x;
}